--- a/index.html
+++ b/index.html
@@ -139,12 +139,13 @@
 			</div>
 			<div id="generate">
 				<button type='button' id="downloadbutton" class='btn'>Download</button>
-				<i class="fa fa-download"></i>
-			</div> 
-			<!-- <div id="saveDiv">
-				<button type='button' id="save" class="btn">Save</button>
+				<span><i class="fa fa-download"></i></span>
 				
-			</div> -->
+			</div> 
+			<div id="saveDiv">
+				<button type='button' id="save" class="btn">Save</button>
+				<span><i class='fa fa-floppy-o'></i></span>
+			</div>
 		</div>
 		<div id="timeline" style="display:none">
 			<div class="timeline-block">
@@ -499,7 +500,7 @@
 	<script src='js/inputInfo.js'></script>
 	<script src='js/login.js'></script>
 	<script src='js/help.js'></script>
-	
+	<script type="text/javascript" src="js/save.js"></script>
 
 </body>
 </html>
