tutorial with other nav bars

--- a/index.html
+++ b/index.html
@@ -449,8 +449,30 @@
 
 
 
-	 <ol id="tutorialguide"  style="display:none" data-joyride >
-	 <li data-id="setname" data-button="Next">
+	
+
+	 <ol id="newdataguide"  style="display:none" data-joyride >
+	 <li data-id="newdata" data-button="Next">
+	    <div>
+	      <p>Click here to create new dataset</p>
+	    </div>
+	  </li>
+	  <li data-id="popularinput" data-button="Next">
+	    <div>
+	      <p>Click here to see the popular input data sets</p>
+	    </div>
+	  </li>
+	  <li data-id="help" data-button="Next" data-options="tipLocation:bottom;nubPosition:top-right">
+	    <div>
+	      <p>Click here to refer to the help manual.</p>
+	    </div>
+	  </li>
+	  <li data-id="login" data-button="Next" data-options="tipLocation:bottom;nubPosition:top-right">
+	    <div>
+	      <p>Click here to log in through facebook or Google+.</p>
+	    </div>
+	  </li>
+	<li data-id="setname" data-button="Next">
 	    <div>
 	      <p>Type in the name of your dataset here.</p>
 	    </div>
