delete button and add new data block work now

--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
 						<input class="btn btn-default" editable="false" readonly="on" placeholder="Data Type" onclick="chooseDataType(this)">
 						<i class="fa fa-folder-open"></i>
 					</div>
+					<a class="btn-delete" href="#">
+	  					<i class="fa fa-trash-o fa-lg fa-delete"></i>
+	  				</a>
 					<span id="data-block-info"><span>
 				</div>
 			</div>
@@ -503,7 +506,7 @@
 	</ol>
 	 
 	<ol id="popularguide"  style="display:none">
-	<li data-id="newdata" data-button="Next">
+	  <li data-id="newdata" data-button="Next">
 	    <div>
 	      <p>Click here to create new dataset</p>
 	    </div>
