delete bug fixed

--- a/index.html
+++ b/index.html
@@ -113,10 +113,8 @@
 						<input class="btn btn-default" editable="false" readonly="on" placeholder="Data Type" onclick="chooseDataType(this)">
 						<i class="fa fa-folder-open"></i>
 					</div>
-					<a class="btn-delete" href="#">
-	  					<i class="fa fa-trash-o fa-lg fa-delete"></i>
-	  				</a>
-					<span id="data-block-info"><span>
+					<a class="btn-delete" href="#"><i class="fa fa-trash-o fa-lg fa-delete"></i></a>
+	  				<span id="data-block-info"><span>
 				</div>
 			</div>
 			<div id="add">
