--- a/index.html
+++ b/index.html
@@ -268,16 +268,19 @@
                  <label for="precision" >precision</label>
                  <input id="precision" class='form-control' type='number' min="1"></input>
               </div>
+              <span id="precisionSpan"></span>
           </div>
           <div class="form-inline range" data-toggle="tooltip" data-placement="right" data-original-title="Specify the range you want here.">
               <div class='form-group'>
                  <label for="min" >Min</label>
                  <input id="min" class='form-control' type='number'></input>
               </div>
+              <span id="minSpan"></span>
               <div class='form-group'>
                  <label for="max" >Max</label>
                  <input id="max" class='form-control' type='number'></input>
               </div>
+              <span id="maxSpan"></span>
           </div>
           <div class="row">
               <div class="col-sm-12">
@@ -296,27 +299,29 @@
           <div class="form-inline">
             <label>Repeat</label>
             <div class="form-group">
-                 <div class="input-group" style="margin: 0;">
+              <div class="input-group" style="margin: 0;">
                 <select id="repeatTypeNumber" class="form-control" style="width: 95px;" onchange="repeatTypeChanged(this)">
-                    <option value="custom">Exact</option>
-                    <option value="backref">Refer To</option>
-                   </select>
+                  <option value="custom">Exact</option>
+                  <option value="backref">Refer To</option>
+                </select>
                 <input id="repeatNumber" class="repeattime form-control" type="number" min="1" style="background-color: white;">
               </div>
-             </div>
-              <label>Times</label>
+              <span id="repeatNumberSpan"></span>
+            </div>
+            <label>Times</label>
           </div>
           <div class="row popup-btn">
-             <button class="btn btn-danger" onClick="cancelClicked(this)">Cancel</button>
-               <button class="btn btn-primary" value="number" onClick="okclicked(this)">OK</button>
+            <button class="btn btn-danger" onClick="cancelClicked(this)">Cancel</button>
+            <button class="btn btn-primary" value="number" onClick="okclicked(this)">OK</button>
           </div>
           </div>
            <div id="string" class="container popup">
              <div class="form-inline">
               <div class='form-group' data-toggle="tooltip" data-placement="top" data-original-title="Enter the length of the string you want.">
                   <label for="stringlength" >String length</label>
-                   <input id="stringlength" class='form-control' type='number' min="1"></input>
+                  <input id="stringlength" class='form-control' type='number' min="1"></input>
                  </div>
+                 <span id="stringlengthSpan"></span>
                  <div class='form-group'>
                    <select id="charset" class='form-control' data-toggle="tooltip" data-placement="top" data-original-title="Click to choose a charset you want.">
                     <option value='ascii'>ASCII</option>
@@ -352,15 +357,16 @@
           <div class="form-inline">
             <label>Repeat</label>
             <div class="form-group">
-                 <div class="input-group" style="margin: 0;">
+              <div class="input-group" style="margin: 0;">
                 <select id="repeatTypeString" class="form-control" style="width: 95px;">
-                    <option value="custom">Exact</option>
-                    <option value="backref">Refer To</option>
-                   </select>
-                   <input id="repeatString" class='repeattime form-control' type='number' min='1'>
+                  <option value="custom">Exact</option>
+                  <option value="backref">Refer To</option>
+                </select>
+                <input id="repeatString" class='repeattime form-control' type='number' min='1'>
               </div>
+              <span id="repeatStringSpan"></span>
              </div>
-              <label>Times</label>
+            <label>Times</label>
           </div>
                <div class="row popup-btn">
               <button class="btn btn-danger" onClick="cancelClicked(this)">Cancel</button>
@@ -373,6 +379,7 @@
                  <label for="node" >No. of nodes</label>
                  <input id="node" class='numbermin form-control' type='number' min="1"></input>
               </div>
+              <span id="nodeSpan"></span>
           </div>
           <div class="form-inline">
               <div class="checkbox">
@@ -396,6 +403,7 @@
                  <label for="edge" >No. of edges</label>
                  <input id="edge" class='numbermax form-control' type='number' min="1"></input>
               </div>
+              <span id="edgeSpan"></span>
               <div class="checkbox">
                  <label data-toggle="tooltip" data-placement="top" data-original-title="Check here if you want the graph to be connected.">
                    <input id="connect" type="checkbox"> is Connected
@@ -435,6 +443,7 @@
                        </select>
                        <input id="repeatGraph" class='repeattime form-control' type='number' min='1'></input>
                   </div>
+                  <span id="repeatGraphSpan"></span>
                  </div>
                   <label>Times</label>
               </div>
