Edit width of input

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           </div>
           <div class="form-inline range" data-toggle="tooltip" data-placement="right" data-original-title="Specify the range you want here.">
               <div class='form-group'>
-                 <label for="min" >Min</label>
+                 <label for="min" style="width: 30px">Min</label>
                  <input id="min" class='form-control' type='number'></input>
               </div>
               <span id="minSpan"></span>
