user can add tags when saving

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	
 	<link rel="stylesheet" type="text/css" href="css/loginstyle.css">
 	<link href="css/docs.css" rel="stylesheet" >
-	<link href="css/bootstrap.css" rel="stylesheet">
 	<link rel=" stylesheet" type="text/css" href="css/joyride-2.1.css">
 
 
@@ -229,7 +228,7 @@
 			<div class="previewLoadingCover"></div>
 		</div>
 	</div>
-	<div id="footer">
+	<div id="footer" style="display:none">
 		<p class='text-center'>
 			Share this via...
 			<span>
@@ -485,11 +484,11 @@
 
 
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/layout.js"></script>
 	<script src="js/jquery.bpopup.min.js"></script>
 	<script type="text/javascript" src="js/jquery.cookie.js"></script>
     <script type="text/javascript" src="js/modernizr.mq.js"></script>
     <script src="js/jquery.joyride-2.1.js"></script>
-	<script type="text/javascript" src="js/layout.js"></script>
 	<script src='js/popupController.js'></script>
 	<script src='js/generator.js'></script>
 	<script src='js/inputInfo.js'></script>
