moved social buttons to top.

--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
     <div id="mainbody">
        <div id="editor">
          <input id="setname" class="form-control" type="text" placeholder="Your data set name here...">
+         <p data-toggle="tooltip" data-placement="bottom" data-original-title="Share via SNS">
+          <span>
+            <a href='https://twitter.com/home?status=https://datagopro.com' target='_blank' class='btn btn-twitter text-center'>
+                <i class='fa fa-twitter'></i>
+            </a>
+            <a href='https://www.facebook.com/sharer/sharer.php?u=https://datagopro.com' target='_blank' class='btn btn-facebook'>
+                <i class='fa fa-facebook'></i>
+            </a>
+            <a href='https://plus.google.com/share?url=https://datagopro.com' target='_blank' class='btn btn-google-plus'>
+                <i class='fa fa-google-plus'></i>
+              </a>
+           </span>
+         </p>
          <div id="data-field">
           <div class='data-block'>
               <a href="#">
@@ -227,24 +240,7 @@
        </div>
     </div>
     <div id="footer" style="display: none">
-       <p class='text-center'>
-         Share this via...
-         <span>
-          <a href='https://twitter.com/home?status=https://datagopro.com' title='Share on Twitter' target='_blank' class='btn btn-social btn-twitter text-center'>
-              <i class='fa fa-twitter'></i>
-              Twitter
-          </a>
-          <a href='https://www.facebook.com/sharer/sharer.php?u=https://datagopro.com' target='_blank' class='btn btn-social btn-facebook'>
-              <i class='fa fa-facebook'></i>
-              Facebook
-          </a>
-          <a href='https://plus.google.com/share?url=https://datagopro.com' target='_blank' class='btn btn-social btn-google-plus'>
-              <i class='fa fa-google-plus'></i>
-              Google+
-          </a>
-         </span>
-       </p>© 2015 Datagopro, Group 11 CP3101B, NUS
-
+       © 2015 Datagopro, Group 11 CP3101B, NUS
     </div>
     <div id="popup" style="display:none">
        <ul class="tabs">
