--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                  <li id='afterlogin'class="dropdown" style="display:none">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span id="profile"></span><span class="caret"></span></a>
                      <ul class="dropdown-menu" role="menu">
-                      <li><a href="#" id="myinput"><a data-target="#timeline">My Input</a></a></li>
+                      <li><a  id="myinput" data-target="#timeline">My Input</a></li>
                       <li class="divider"></li>
                       <li><a href="#" id="logout">Logout</a></li>
                   </ul>
