--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <li><a id="login">Login</a></li>
             
             <li id='afterlogin'class="dropdown" style="display:none">
+              <div class="loginLoadingCover"></div>
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span id="profile"></span><span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a  id="myinput" data-target="#timeline">My Input</a></li>
