client side short link url almost done

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <a href='https://twitter.com/home?status=https://datagopro.com' target='_blank' class='btn btn-twitter text-center'>
                   <i class='fa fa-twitter'></i>
                 </a>
-                <a href='https://www.facebook.com/sharer/sharer.php?u=https://datagopro.com' target='_blank' class='btn btn-facebook'>
+                <a href='#' target='_blank' class='btn btn-facebook' id="fbShare">
                   <i class='fa fa-facebook'></i>
                 </a>
                 <a href='https://plus.google.com/share?url=https://datagopro.com' target='_blank' class='btn btn-google-plus'>
