changed save to add tags, removed saved successfully, changed save as popular to private, added effect when tags get selected.

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
               
             </div>
             <div id="saveDiv">
-              <button type='button' id="save" class="btn">Save</button>
-              <span><i class='fa fa-floppy-o'></i></span>
+              <button type='button' id="save" class="btn">Add Tags</button>
+              <span><i class="fa fa-tags"></i></span>
             </div>
           </div>
           <div id="timeline" style="display:none">
