and to the dropdown list after login

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <ul class="dropdown-menu" role="menu">
                 <li><a  id="myinput" data-target="#timeline"><i class="fa fa-folder"></i>My Input</a></li>
                 <li class="divider"></li>
-                <li><a href="#" id="logout">Logout</a></li>
+                <li><a href="#" id="logout"><i class="fa fa-sign-out"></i>Logout</a></li>
               </ul>
             </li>
           </ul>
