--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
             <li class="active">
               <a id="newdata"data-target="#editor"><i class="fa fa-file-text-o"></i>New Data</a>
             </li>
-            <li ><a id='popularinput' data-target="#popular"><i class="fa fa-list-ul"></i>Popular Input</a></li>
+            <li >
+            	<a id='popularinput' data-target="#popular"><i class="fa fa-list-ul"></i>Popular Input</a>
+            </li>
+            <li><p id="notice">All changes saved.</p></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a id='help' data-target="#help"><i class="fa fa-question-circle"></i>Help</a></li>
@@ -74,7 +77,7 @@
             
             <li id='afterlogin'class="dropdown" style="display:none">
               <div class="loginLoadingCover"></div>
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-user"></i><span id="profile"></span><span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-user"></i><span id="profile"></span><i class="fa fa-caret-down"></i></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a  id="myinput" data-target="#timeline"><i class="fa fa-folder"></i>My Input</a></li>
                 <li class="divider"></li>
