display input in preview when view is clicked in popular input. (still buggy)

--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
                 <span class='label-size'>
                   <a data-target="cat1">Cat1</a>
                 </span>
-                <a class= 'clone' data-target="#">Clone<i class="fa fa-pencil"></i></a>
-                <a class='view' data-target="1" class="view">View<i class="fa fa-eye"></i></a>              
+                <a class= 'clone' data-target="1">Clone<i class="fa fa-pencil"></i></a>
+                <a class='view' data-target="1" >View<i class="fa fa-eye"></i></a>              
               </div>
               <div class="popular-block">
                 <h4>DATA SET NAME 1</h4>
