For view data history, user cannot change the data

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
               </div>
               <div class="row popup-btn">
                 <button class="btn btn-danger" onClick="cancelClicked(this)">Cancel</button>
-                <button class="btn btn-primary" value="number" onClick="okclicked(this)">OK</button>
+                <button class="btn btn-primary ok" value="number" onClick="okclicked(this)">OK</button>
               </div>
             </div>
             <div id="string" class="container popup">
@@ -306,7 +306,7 @@
               </div>
               <div class="row popup-btn">
                 <button class="btn btn-danger" onClick="cancelClicked(this)">Cancel</button>
-                <button class="btn btn-primary" value="string" onClick="okclicked(this)">OK</button>
+                <button class="btn btn-primary ok" value="string" onClick="okclicked(this)">OK</button>
               </div>
             </div>
             <div id="graph" class="container popup">
@@ -385,7 +385,7 @@
               </div>
               <div class="row popup-btn">
                 <button class="btn btn-danger" onClick="cancelClicked(this)">Cancel</button>
-                <button class="btn btn-primary" value="graph" onClick="okclicked(this)">OK</button>
+                <button class="btn btn-primary ok" value="graph" onClick="okclicked(this)">OK</button>
               </div>
             </div>
           </div>
